--- a/polysleep/Resources/Localizations/Profile.xcstrings
+++ b/polysleep/Resources/Localizations/Profile.xcstrings
@@ -1264,6 +1264,74 @@
           }
         }
       }
+    },
+    "settings.language.changed.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Language Changed"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dil Değiştirildi"
+          }
+        }
+      }
+    },
+    "settings.language.changed.message" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "The app language has been changed. The interface will be refreshed to apply the changes."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uygulama dili değiştirildi. Değişikliklerin uygulanması için arayüz yenilenecek."
+          }
+        }
+      }
+    },
+    "settings.language.changed.ok" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "OK"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tamam"
+          }
+        }
+      }
+    },
+    "settings.language.loading" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Applying language settings..."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dil ayarları uygulanıyor..."
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
