-Supabase bağımlılığı kaldırıldı ve yerel veri yönetimi için Repository yapısı eklendi.
-Kullanıcı ve uyku kayıtları için yeni modeller oluşturuldu.

-Offline-first yaklaşımı benimsenerek, uygulama genelinde Supabase entegrasyonu kaldırıldı.
-Ayrıca, bazı gereksiz dosyalar silindi ve .gitignore güncellendi.

--- a/polysleep/Resources/Localizations/Common.xcstrings
+++ b/polysleep/Resources/Localizations/Common.xcstrings
@@ -120,6 +120,111 @@
         }
       }
     },
+    "adaptation.phase.0" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Start"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Başlangıç"
+          }
+        }
+      }
+    },
+    "adaptation.phase.1" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adaptation"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyum"
+          }
+        }
+      }
+    },
+    "adaptation.phase.2" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adaptation"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adaptasyon"
+          }
+        }
+      }
+    },
+    "adaptation.phase.3" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Advanced Adaptation"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "İleri Adaptasyon"
+          }
+        }
+      }
+    },
+    "adaptation.phase.4" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Full Adaptation"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tam Adaptasyon"
+          }
+        }
+      }
+    },
+    "adaptation.phase.5" : {
+      "comment" : "Adaptation Phase 5: Complete Adaptation"
+    },
+    "adaptation.phase.unknown" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Unknown"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bilinmiyor"
+          }
+        }
+      }
+    },
     "app.name" : {
       "extractionState" : "manual",
       "localizations" : {
